--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,20 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>6.0.6</version>
 		</dependency>
+		
+				<!--  https://mvnrepository.com/artifact/io.netty/netty-all  -->
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.1.21.Final</version>
+		</dependency>
+		
+		<dependency>
+    		<groupId>com.google.code.gson</groupId>
+    		<artifactId>gson</artifactId>
+    		<version>2.8.2</version>
+		</dependency>
+		
 	</dependencies>
 
 </project>
