--- a/src/main/resources/controller.config
+++ b/src/main/resources/controller.config
@@ -7,3 +7,13 @@ controller.request.body.updateclass=controller.func.update_class
 controller.request.body.freeze=controller.func.freeze
 controller.request.body.continue=controller.func.continue
 controller.request.body.set_error_reporting_level=controller.func.set_error_reporting_level
+
+controller.func.max_thread_count=setMaxThreadCount
+controller.func.set_max_db_connections_count=setMaxDBConnectionsCount
+controller.func.add_command=addCommand
+controller.func.delete_command=deleteCommand
+controller.func.update_command=updateCommand
+controller.func.update_class=updateClass
+controller.func.freeze.freeze=freeze
+controller.func.continue=resume
+controller.func.set_error_reporting_level=setErrorReportingLevel
