Done with implementing controller and testing it via postman and main method

--- a/src/main/resources/commands.config
+++ b/src/main/resources/commands.config
@@ -1,8 +1,10 @@
-search.user=SearchUserCommand
-search.user.handler=ArangoSearchHandler
-search.company=SearchCompaniesCommand
-search.company.handler=ArangoSearchHandler
-search.job=SearchJobsCommand
-search.job.handler=ArangoSearchHandler
-search.post=SearchPostsCommand
+#
+#Wed Mar 14 15:22:50 EET 2018
 search.post.handler=ArangoSearchHandler
+search.post=SearchPostsCommand
+search.job.handler=ArangoSearchHandler
+search.company=SearchCompaniesCommand
+search.user=SearchUserCommand
+search.job=SearchJobsCommand
+search.user.handler=ArangoSearchHandler
+search.company.handler=ArangoSearchHandler
