--- a/src/main/resources/app.config
+++ b/src/main/resources/app.config
@@ -1,3 +1,8 @@
-app.host=localhost
+#
+#Wed Mar 14 14:47:07 EET 2018
 app.request.port=3030
+app.host=localhost
+app.classes.path=target/classes/com/linkedin/replica/serachEngine
+app.max_thread_count=20
+app.max_db_connections_count=10
 app.controller.port=3031
