Adding unit testing

--- a/src/main/resources/commands.config
+++ b/src/main/resources/commands.config
@@ -1,7 +1,9 @@
 #
-#Wed Mar 14 15:22:50 EET 2018
+#Wed Mar 14 20:10:13 EET 2018
+search.test=testCommand
 search.post.handler=ArangoSearchHandler
 search.post=SearchPostsCommand
+search.test.handler=ArangoSearchHandler
 search.job.handler=ArangoSearchHandler
 search.company=SearchCompaniesCommand
 search.user=SearchUserCommand
