--- a/src/main/resources/app.config
+++ b/src/main/resources/app.config
@@ -1,8 +1,13 @@
 #
-#Wed Mar 14 20:26:18 EET 2018
+#Sun Mar 18 11:14:20 EET 2018
+rabbitmq.queue.name=SEARCH
+rabbitmq.ip=localhost
+rabbitmq.port=8000
+
+app.controller.host=localhost
+app.controller.port=8080
+
 app.classes.path=target/classes/com/linkedin/replica/serachEngine
-app.host=localhost
-app.request.port=3030
 app.max_thread_count=20
 app.max_db_connections_count=10
-app.controller.port=3031
+
