Adding resume and freeze functionality to controller

--- a/src/main/resources/controller.config
+++ b/src/main/resources/controller.config
@@ -5,7 +5,7 @@ controller.request.body.deletecommand=controller.func.delete_command
 controller.request.body.updatecommand=controller.func.update_command
 controller.request.body.updateclass=controller.func.update_class
 controller.request.body.freeze=controller.func.freeze
-controller.request.body.continue=controller.func.continue
+controller.request.body.resume=controller.func.resume
 controller.request.body.set_error_reporting_level=controller.func.set_error_reporting_level
 
 controller.func.max_thread_count=setMaxThreadCount
@@ -14,6 +14,6 @@ controller.func.add_command=addCommand
 controller.func.delete_command=deleteCommand
 controller.func.update_command=updateCommand
 controller.func.update_class=updateClass
-controller.func.freeze.freeze=freeze
-controller.func.continue=resume
+controller.func.freeze=freeze
+controller.func.resume=resume
 controller.func.set_error_reporting_level=setErrorReportingLevel
