--- a/src/main/resources/app.config
+++ b/src/main/resources/app.config
@@ -1,8 +1,10 @@
 app.classes.path=target/classes/com/linkedin/replica/serachEngine
 app.controller.host=localhost
 app.max_thread_count=20
-rabbitmq.ip=localhost
 rabbitmq.port=8001
 app.max_db_connections_count=10
 rabbitmq.queue.name=SEARCH
-app.controller.port=8082
+app.controller.port=8083
+rabbitmq.password=123456
+rabbitmq.ip=192.168.43.50
+rabbitmq.username=admin
