--- a/src/main/resources/app.config
+++ b/src/main/resources/app.config
@@ -1,10 +1,12 @@
-app.classes.path=target/classes/com/linkedin/replica/serachEngine
-app.controller.host=localhost
-app.max_thread_count=20
-rabbitmq.port=8001
-app.max_db_connections_count=10
+#
+#Tue May 08 14:01:35 EET 2018
 rabbitmq.queue.name=SEARCH
-app.controller.port=8083
-rabbitmq.password=123456
-rabbitmq.ip=192.168.43.50
-rabbitmq.username=admin
+app.max_db_connections_count=10
+app.classes.path=target/classes/com/linkedin/replica/serachEngine
+rabbitmq.username=guest
+rabbitmq.port=8001
+app.controller.host=localhost
+rabbitmq.password=guest
+rabbitmq.ip=localhost
+app.max_thread_count=20
+app.controller.port=8081
